# solodeveling

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  README.th.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release-candidate.yml
.solodeveling/: project.md  risks.md  roadmap.md  standards.md  state.md
.solodeveling/evidence/: EVIDENCE-001.md  EVIDENCE-002.md  EVIDENCE-003.md  EVIDENCE-004.md  EVIDENCE-005.md  EVIDENCE-006.md  EVIDENCE-007.md  EVIDENCE-008.md  EVIDENCE-009.md  EVIDENCE-010.md  EVIDENCE-011.md  EVIDENCE-012.md  EVIDENCE-013.md  EVIDENCE-014.md  EVIDENCE-015.md  EVIDENCE-016.md  EVIDENCE-017.md  EVIDENCE-018.md  EVIDENCE-019.md  EVIDENCE-020.md  EVIDENCE-021.md  EVIDENCE-025.md  EVIDENCE-026.md  EVIDENCE-027.md  EVIDENCE-028.md  EVIDENCE-029.md  EVIDENCE-030.md  EVIDENCE-031.md  EVIDENCE-032.md  EVIDENCE-033.md  EVIDENCE-034.md  EVIDENCE-035.md  EVIDENCE-036.md  EVIDENCE-037.md  EVIDENCE-038.md  EVIDENCE-039.md  EVIDENCE-040.md  EVIDENCE-041.md  EVIDENCE-042.md  EVIDENCE-043.md  (+1 more)
.solodeveling/work/: WORK-013.md  WORK-014.md  WORK-031.md  WORK-032.md  WORK-038.md  WORK-039.md  WORK-043.md
.solodeveling/work/active/: WORK-002.md  WORK-003.md  (+12 more)
benchmarks/comparative/: feedback-0.1.1-vs-0.1.2.yaml  pilot.yaml  result.schema.json  solodeveling-0.2.0-vs-no-skill.yaml
benchmarks/field/: scorecard.schema.json  scorecard.template.json
docs/: comparative-benchmark.md  cross-agent-evaluation.md  installation.md  measurement.md  protocol-contract.md  publishing.md  release-readiness.md  runtime-adapters.md
docs/releases/: 0.1.0.md  0.1.1.md  0.1.2.md  0.2.0.md  0.3.0.md
evals/: evaluation-response.schema.json  evaluation-result.schema.json
evals/scenarios/: core.yaml
scripts/: assemble_release_set.py  build_candidate.py  build_native.py  build_release.py  classify_ci_changes.py  comparative_benchmark.py  field_scorecard.py  native_entry.py  prepare_npm_package.py  prepare_publication.py  publication_gate.py  smoke_installed.py  smoke_native.py  validate_skill_suite.py  verify_candidate.py  verify_release.py  verify_release_set.py
skills/solodeveling/: SKILL.md
skills/solodeveling-brainstorming/: SKILL.md
skills/solodeveling-debugging/: SKILL.md
skills/solodeveling-executing-work/: SKILL.md
skills/solodeveling-maintaining/: SKILL.md
skills/solodeveling-onboarding/: SKILL.md
skills/solodeveling-planning-work/: SKILL.md
skills/solodeveling-releasing/: SKILL.md
skills/solodeveling-securing/: SKILL.md
skills/solodeveling-shaping-work/: SKILL.md
skills/solodeveling-standard-delivery/: SKILL.md
skills/solodeveling-verifying/: SKILL.md
src/solodeveling_protocol/: __init__.py  adapter_cli.py  adapters.py  cli.py  comparative_benchmark.py  evaluation.py  evaluation_cli.py  evaluation_runner.py  field_scorecard.py  frontmatter.py  lifecycle.py  lifecycle_cli.py  main_cli.py  memory.py  memory_cli.py  models.py  release.py  resources.py  routing.py  secrets.py  security.py  transitions.py  validation.py
tests/: test_adapter_cli.py  test_adapters.py  test_ci_policy.py  test_cli.py  test_comparative_benchmark.py  test_evaluation.py  test_evaluation_cli.py  test_evaluation_docs.py  test_evaluation_runner.py  test_feedback_benchmark.py  test_field_scorecard.py  test_frontmatter.py  test_installation_docs.py  test_lifecycle_cli.py  test_lifecycle_workflow_scenario.py  test_main_cli.py  test_memory.py  test_memory_cli.py  test_native_build.py  test_npm_package.py  test_package.py  test_packaged_resources.py  test_project_memory.py  test_publication.py  test_publication_gate.py  test_release_candidate.py  test_release_readiness.py  test_release_set.py  test_routing.py  test_runtime_docs.py  test_secret_detection.py  test_security.py  test_security_findings.py  test_skill_suite.py  test_transitions.py  test_validation.py
tests/scenarios/: brainstorming.yaml  lifecycle-workflows.yaml  release-maintenance.yaml  router-onboarding.yaml  security.yaml
(+117 files in other folders)
