[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "solodeveling-protocol"
dynamic = ["version"]
description = "Single-agent-first software delivery protocol and portable skill suite"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{name = "ohmiler"}]
keywords = ["agent-skills", "coding-agents", "secure-sdlc", "solo-developer"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "PyYAML>=6.0,<7",
  "jsonschema>=4.23,<5",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "cyclonedx-bom==7.3.0",
  "pytest==9.1.1",
  "tomli>=2.2,<3; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/ohmiler/solodeveling"
Source = "https://github.com/ohmiler/solodeveling"
Issues = "https://github.com/ohmiler/solodeveling/issues"
Documentation = "https://github.com/ohmiler/solodeveling#readme"

[project.scripts]
solodeveling-init = "solodeveling_protocol.memory_cli:main"
solodeveling-validate = "solodeveling_protocol.cli:main"
solodeveling-adapt = "solodeveling_protocol.adapter_cli:main"
solodeveling-eval = "solodeveling_protocol.evaluation_cli:main"

[tool.hatch.version]
path = "src/solodeveling_protocol/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/solodeveling_protocol"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "solodeveling_protocol/resources/skills"
"evals" = "solodeveling_protocol/resources/evals"

[tool.hatch.build.targets.sdist]
include = [
  "/CONTRIBUTING.md",
  "/LICENSE",
  "/SECURITY.md",
  "/README.md",
  "/pyproject.toml",
  "/docs",
  "/evals",
  "/scripts",
  "/skills",
  "/src",
  "/tests",
]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
pythonpath = ["src"]
testpaths = ["tests"]
